[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.22",
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel.linux]
before-build = "rm -rf {project}/build"
before-all = "yum install -y gmp-devel mpfr-devel python3-devel"

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
before-all = [
    "apk add gmp-dev mpfr-dev python3-dev"
]

[tool.cibuildwheel.windows]
before-build = [
    "pip install delvewheel --no-cache-dir",
    "if exist build rmdir /s /q build",
]
before-all=[
    "choco install mingw",
    "choco install msys2",
    "choco install cmake",
    #"pacman -S mingw-w64-x86_64-toolchain",
    "choco install git",
    "choco install wget",
    "wget https://gmplib.org/download/gmp/gmp-6.3.0.tar.xz",
    "tar -xvzf gmp-6.3.0.tar.xz && cd gmp-6.3.0 && ./configure && make && make check"
]
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-build = "rm -rf {project}/build"
before-all = [
    "brew install mpfr",
    "brew install gmp"
]

#https://github.com/ryepdx/gmp.git

#choco install msys2